--- a/css/analogous.css
+++ b/css/analogous.css
@@ -10,7 +10,7 @@
             font-family: Helvetica, Arial, sans-serif;
         }
         html,body{
-            background-color: #d4d4d4;
+            background-color: #FDDE9C;
         }
         h1{
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
@@ -34,11 +34,11 @@
             text-decoration: none;
             border-bottom: 0.2rem solid black;
             padding: 0.2rem 2rem;
-            color: #C3FFF6;
+            color: #BB6F29;
         }
         nav li>a:hover,
         nav li>a:active{
-            color: #222;
+            color: #8A8229;
         }
         p{
             font-size: 1.414rem;
@@ -51,7 +51,7 @@
             width: 80%;
             max-width: 1200px;
             margin: 0 auto;
-            background-color: #e4e4e4;
+            background-color: #3E5F20;
         }
         header{
             width:100%;
@@ -73,5 +73,5 @@
         footer p{
             font-size: 1rem;
             padding: 2rem;
-            color: #666;
+            color: #44AA47;
 }
