--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@
             font-family: Helvetica, Arial, sans-serif;
         }
         html,body{
-            background-color: #E2CD11;
+            background-color: #1A00FF;
         }
         h1{
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
@@ -33,11 +33,11 @@
             text-decoration: none;
             border-bottom: 0.2rem solid black;
             padding: 0.2rem 2rem;
-            color: #AACCB7;
+            color: #1A00FF;
         }
         nav li>a:hover,
         nav li>a:active{
-            color: #6A7F72;
+            color: #4C6FBD;
         }
         p{
             font-size: 1.414rem;
@@ -50,7 +50,7 @@
             width: 80%;
             max-width: 1200px;
             margin: 0 auto;
-            background-color: #E2FFAE;
+            background-color: #FFFFFF;
         }
         header{
             width:100%;
@@ -72,5 +72,5 @@
         footer p{
             font-size: 1rem;
             padding: 2rem;
-            color: #5C7F1E;
+            color: #4C6FBD;
         }
