--- a/css/complementary.css
+++ b/css/complementary.css
@@ -9,7 +9,7 @@
             font-family: Helvetica, Arial, sans-serif;
         }
         html,body{
-            background-color: #FFFFFF;
+            background-color: #CCCC89;
         }
         h1{
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
@@ -33,11 +33,11 @@
             text-decoration: none;
             border-bottom: 0.2rem solid black;
             padding: 0.2rem 2rem;
-            color: #000000;
+            color: #221333;
         }
         nav li>a:hover,
         nav li>a:active{
-            color: #FF0000;
+            color: #63497F;
         }
         p{
             font-size: 1.414rem;
@@ -50,7 +50,7 @@
             width: 80%;
             max-width: 1200px;
             margin: 0 auto;
-            background-color: #2BAE27;
+            background-color: #7F7F49;
         }
         header{
             width:100%;
@@ -72,5 +72,5 @@
         footer p{
             font-size: 1rem;
             padding: 2rem;
-            color: #FFFFFF;
+            color: #63497F;
         }
