--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-*{
+{
             padding: 0;
             margin: 0;
             box-sizing: border-box;
@@ -9,7 +9,7 @@
             font-family: Helvetica, Arial, sans-serif;
         }
         html,body{
-            background-color: #1A00FF;
+            background-color: #959582;
         }
         h1{
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
@@ -33,11 +33,11 @@
             text-decoration: none;
             border-bottom: 0.2rem solid black;
             padding: 0.2rem 2rem;
-            color: #1A00FF;
+            color: #4C4C2C;
         }
         nav li>a:hover,
         nav li>a:active{
-            color: #4C6FBD;
+            color: #CCCC75;
         }
         p{
             font-size: 1.414rem;
@@ -50,7 +50,7 @@
             width: 80%;
             max-width: 1200px;
             margin: 0 auto;
-            background-color: #FFFFFF;
+            background-color: #CCCCB2;
         }
         header{
             width:100%;
@@ -72,5 +72,5 @@
         footer p{
             font-size: 1rem;
             padding: 2rem;
-            color: #4C6FBD;
+            color: #4C4C2C;
         }
